--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,6 +1,12 @@
 @import '../../stylesheets/mixins';
 
 .assets-list {
+    @media only screen and (min-width: 768px) {
+        margin: 10rem;
+        .asset {
+            justify-content: center;
+        }
+    }
     margin: 1rem;
     padding: 0;
     .asset {
@@ -47,81 +53,4 @@
 .up-arrow {
     @include rotate(180deg);
     border-top-color: green;
-}
-
-.error {
-    color: red;
-    margin: 2rem 0;
-}
-
-.loader {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    z-index: 1;
-    width: 120px;
-    height: 120px;
-    margin: -76px 0 0 -76px;
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #3498db;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-}
-.tiny-loader,
-.tiny-loader:before,
-.tiny-loader:after {
-    border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation: load 1.8s infinite ease-in-out;
-    animation: load 1.8s infinite ease-in-out;
-}
-.tiny-loader {
-    color: cadetblue;
-    font-size: 10px;
-    margin: 1.5rem auto 4rem;
-    position: relative;
-    text-indent: -9999em;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation-delay: -0.16s;
-    animation-delay: -0.16s;
-}
-.tiny-loader:before,
-.tiny-loader:after {
-    content: '';
-    position: absolute;
-    top: 0;
-}
-.tiny-loader:before {
-    left: -3.5em;
-    -webkit-animation-delay: -0.32s;
-    animation-delay: -0.32s;
-}
-.tiny-loader:after {
-    left: 3.5em;
-}
-@-webkit-keyframes load {
-    0%,
-    80%,
-    100% {
-        box-shadow: 0 2.5em 0 -1.3em;
-    }
-    40% {
-        box-shadow: 0 2.5em 0 0;
-    }
-}
-@keyframes load {
-    0%,
-    80%,
-    100% {
-        box-shadow: 0 2.5em 0 -1.3em;
-    }
-    40% {
-        box-shadow: 0 2.5em 0 0;
-    }
 }
